# disband-latest

./: README.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: main.yml  release.yml
ios/: .gitignore  README.md  project.yml
ios/tools/: make_icon.swift  make_icon_logo.swift
scripts/: fix-main-ref-conflict.mjs  next-release-version.mjs  resolve-release-build.mjs  send-mobile-launch.mjs  set-version.mjs  sync-auth-email-templates.mjs  tauri-next-build.mjs  validate-release-tag.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  macos-media-permissions.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: DisbandRoot.tsx
src/contexts/: AppContext.tsx
src/hooks/: useAudioDevices.ts  useCallManager.ts  useDirectCall.ts  useGifFavorites.ts  useGroupCallManager.ts  useLiveVideoStream.ts  useMediaUpload.ts  useSubscription.ts  useTypingPresence.ts  useVoiceChannel.ts
src/lib/: app-cache.ts  audio-settings.ts  auth-redirect.ts  authErrors.ts  emoji.ts  giphy.ts  github-releases.ts  link-preview.ts  media-permissions.ts  media.ts  message-pagination.ts  messages.ts  mfa-config.ts  mfa.ts  mobile-detect.ts  notifications.ts  platform.ts  profileColor.ts  profileErrors.ts  public-env.ts  rate-limit.ts  read-cursors.ts  realtime.ts  recover-session-from-url.ts  request-ip.ts  resend.ts  ringtone.ts  safe-url.ts  server-auth.ts  server-last-channel.ts  ssrf-guard.ts  stripe-client.ts  stripe.ts  subscription.ts  turnstile.ts  user-settings.ts  username-policy.ts  utils.ts  version.ts  vpn-check.ts  (+2 more)
supabase/: config.toml
supabase/.temp/: linked-project.json
supabase/migrations/: 0001_init.sql  0002_full_app.sql  0003_fix_profile_bootstrap.sql  0004_rls_invites_roles.sql  0005_welcome_channel.sql  0006_signup_profile_rls.sql  0007_group_chats.sql  0008_fix_group_chat_rls.sql  0009_group_calls_and_management.sql  0010_profile_gradient.sql  0011_preferred_status.sql  0012_files_reactions_replies.sql  0013_mobile_waitlist.sql  0014_platform_badges.sql  0015_friendship_pair_unique.sql  0016_user_settings.sql  0017_notify_everyone.sql  0018_mfa_aal_enforcement.sql  0019_profile_limits_and_group_spam.sql  0020_group_creation_cooldown.sql  0023_security_hardening.sql  (+7 more)
(+130 files in other folders)
