[package]
name = "disband"
version = "0.1.4"
description = "Disband — one codebase, every platform."
authors = ["Disband"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri's mobile/desktop entry points link against.
[lib]
name = "disband_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.6"

[features]
# Used by the `tauri dev`/`tauri build` tooling.
custom-protocol = ["tauri/custom-protocol"]
